WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
53637
[chromium] complex joining characters positioned in wrong place
https://bugs.webkit.org/show_bug.cgi?id=53637
Summary
[chromium] complex joining characters positioned in wrong place
Evan Martin
Reported
2011-02-02 16:12:03 PST
[chromium] complex joining characters positioned in wrong place
Attachments
Patch
(43.28 KB, patch)
2011-02-02 16:14 PST
,
Evan Martin
no flags
Details
Formatted Diff
Diff
Patch
(43.39 KB, patch)
2011-02-02 16:47 PST
,
Evan Martin
no flags
Details
Formatted Diff
Diff
Patch
(43.33 KB, patch)
2011-02-02 17:13 PST
,
Evan Martin
tony
: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Evan Martin
Comment 1
2011-02-02 16:14:15 PST
Created
attachment 80997
[details]
Patch
Evan Martin
Comment 2
2011-02-02 16:14:50 PST
Tony: review. Others: FYI
WebKit Review Bot
Comment 3
2011-02-02 16:26:28 PST
Attachment 80997
[details]
did not build on chromium: Build output:
http://queues.webkit.org/results/7689337
Tony Chang
Comment 4
2011-02-02 16:31:03 PST
Comment on
attachment 80997
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=80997&action=review
r- for ews bot failure
> LayoutTests/ChangeLog:12 > + * platform/chromium-linux/fast/text/international/chromium-linux-gpos-expected.checksum: Added. > + * platform/chromium-linux/fast/text/international/chromium-linux-gpos-expected.png: Added.
Putting chromium-linux in the filename seems redundant. Maybe name the test something like true-type-gpos-table.html or complex-joining-using-gpos.html?
> LayoutTests/platform/chromium-linux/fast/text/international/chromium-linux-gpos-expected.txt:20 > + text run at (0,0) width 572: "The two words should be separated by a space, and there should be no mark above the space."
Looks like there are 3 words.
> Source/WebCore/platform/graphics/chromium/ComplexTextControllerLinux.cpp:212 > + int scale = 64 * size * 0x10000 / platformData.emSizeInFontUnits();
Can you put 64 and 0x10000 into constants so they are less magical?
Evan Martin
Comment 5
2011-02-02 16:31:28 PST
Crap. Need to roll Chrome dep forward to pick up new Skia. Good job, EWS bot!
Evan Martin
Comment 6
2011-02-02 16:47:00 PST
Created
attachment 81004
[details]
Patch
Evan Martin
Comment 7
2011-02-02 16:47:15 PST
Comment on
attachment 81004
[details]
Patch cq- because I need to update chromium deps first
WebKit Review Bot
Comment 8
2011-02-02 16:58:38 PST
Attachment 81004
[details]
did not build on chromium: Build output:
http://queues.webkit.org/results/7694053
Evan Martin
Comment 9
2011-02-02 17:13:51 PST
Created
attachment 81008
[details]
Patch
Evan Martin
Comment 10
2011-02-03 09:49:52 PST
Committed
r77504
: <
http://trac.webkit.org/changeset/77504
>
Evan Martin
Comment 11
2013-01-28 10:36:59 PST
***
Bug 41435
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug