2011-02-02  Evan Martin  <evan@chromium.org>

Reviewed by Tony Chang.

        [chromium] complex joining characters positioned in wrong place
        https://bugs.webkit.org/show_bug.cgi?id=53637

        Add a test that includes some characters that exhibited the problem.
        Unfortunately it's purely a rendering issue, so it is a pixel test.

        * platform/chromium-linux/fast/text/international/complex-joining-using-gpos-expected.checksum: Added.
        * platform/chromium-linux/fast/text/international/complex-joining-using-gpos-expected.png: Added.
        * platform/chromium-linux/fast/text/international/complex-joining-using-gpos-expected.txt: Added.
        * platform/chromium-linux/fast/text/international/complex-joining-using-gpos.html: Added.
2011-02-02  Evan Martin  <evan@chromium.org>

        Reviewed by Tony Chang.

        [chromium] complex joining characters positioned in wrong place
        https://bugs.webkit.org/show_bug.cgi?id=53637

        Provide the correct font metrics to Harfbuzz related to the font design space.
        There are used in some fonts for GPOS positioning.

        Test: platform/chromium-linux/fast/text/international/complex-joining-using-gpos.html

        * platform/graphics/chromium/ComplexTextControllerLinux.cpp:
        (WebCore::ComplexTextController::setupFontForScriptRun):
        (WebCore::ComplexTextController::allocHarfbuzzFont):
        * platform/graphics/chromium/FontPlatformDataLinux.cpp:
        (WebCore::FontPlatformData::FontPlatformData):
        (WebCore::FontPlatformData::emSizeInFontUnits):
        (WebCore::FontPlatformData::operator=):
        * platform/graphics/chromium/FontPlatformDataLinux.h:
        (WebCore::FontPlatformData::FontPlatformData):

Canonical link: https://commits.webkit.org/67586@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@77504 268f45cc-cd09-0410-ab3c-d52691b4dbfc